// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ContentManagement/Product/Add/lib/components/FileAttachment render 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <div>
        <WithStyles(ForwardRef(Grid))
          container={true}
          style={
            Object {
              "flexGrow": 1,
              "marginRight": 12,
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            md={8}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
            xs={12}
          >
            <Icon
              type="png"
            />
                
            <div>
              <WithStyles(Component)
                variant="h5"
              >
                test
              </WithStyles(Component)>
              <br />
              <WithStyles(Component)
                variant="subtitle2"
              >
                
              </WithStyles(Component)>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            md={2}
            xs={10}
          >
            <WithStyles(Component)
              variant="subtitle1"
            >
              Invalid date
               | 
              0
            </WithStyles(Component)>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
              }
            }
            xs={2}
          >
            <div
              onClick={[Function]}
            >
              <Download
                fill="#DE1B1B"
                style={
                  Object {
                    "color": "#DE1B1B",
                    "fontSize": 24,
                  }
                }
              />
            </div>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(LoadableComponent))
    file="https://test"
    onClose={[Function]}
    open={false}
    title="test"
  />
</div>
`;

exports[`src/containers/ContentManagement/Product/Add/lib/components/FileAttachment render type DELETE 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <div>
        <WithStyles(ForwardRef(Grid))
          container={true}
          style={
            Object {
              "flexGrow": 1,
              "marginRight": 12,
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            md={8}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
            xs={12}
          >
            <Icon
              type="DELETE"
            />
                
            <div>
              <WithStyles(Component)
                variant="h5"
              >
                test
              </WithStyles(Component)>
              <br />
              <WithStyles(Component)
                variant="subtitle2"
              >
                
              </WithStyles(Component)>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            md={2}
            xs={10}
          >
            <WithStyles(Component)
              variant="subtitle1"
            >
              Invalid date
               | 
              0
            </WithStyles(Component)>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
              }
            }
            xs={2}
          >
            <div
              onClick={[Function]}
            >
              <Download
                fill="#DE1B1B"
                style={
                  Object {
                    "color": "#DE1B1B",
                    "fontSize": 24,
                  }
                }
              />
            </div>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(LoadableComponent))
    file="https://test"
    onClose={[Function]}
    open={false}
    title="test"
  />
</div>
`;

exports[`src/containers/ContentManagement/Product/Add/lib/components/FileAttachment render type EDIT 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <div>
        <WithStyles(ForwardRef(Grid))
          container={true}
          style={
            Object {
              "flexGrow": 1,
              "marginRight": 12,
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            md={8}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
            xs={12}
          >
            <Icon
              type="EDIT"
            />
                
            <div>
              <WithStyles(Component)
                variant="h5"
              >
                test
              </WithStyles(Component)>
              <br />
              <WithStyles(Component)
                variant="subtitle2"
              >
                
              </WithStyles(Component)>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            md={2}
            xs={10}
          >
            <WithStyles(Component)
              variant="subtitle1"
            >
              Invalid date
               | 
              0
            </WithStyles(Component)>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
              }
            }
            xs={2}
          >
            <div
              onClick={[Function]}
            >
              <Download
                fill="#DE1B1B"
                style={
                  Object {
                    "color": "#DE1B1B",
                    "fontSize": 24,
                  }
                }
              />
            </div>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(LoadableComponent))
    file="https://test"
    onClose={[Function]}
    open={false}
    title="test"
  />
</div>
`;

exports[`src/containers/ContentManagement/Product/Add/lib/components/FileAttachment render type JPG 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <div>
        <WithStyles(ForwardRef(Grid))
          container={true}
          style={
            Object {
              "flexGrow": 1,
              "marginRight": 12,
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            md={8}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
            xs={12}
          >
            <Icon
              type="JPG"
            />
                
            <div>
              <WithStyles(Component)
                variant="h5"
              >
                test
              </WithStyles(Component)>
              <br />
              <WithStyles(Component)
                variant="subtitle2"
              >
                
              </WithStyles(Component)>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            md={2}
            xs={10}
          >
            <WithStyles(Component)
              variant="subtitle1"
            >
              Invalid date
               | 
              0
            </WithStyles(Component)>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
              }
            }
            xs={2}
          >
            <div
              onClick={[Function]}
            >
              <Download
                fill="#DE1B1B"
                style={
                  Object {
                    "color": "#DE1B1B",
                    "fontSize": 24,
                  }
                }
              />
            </div>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(LoadableComponent))
    file="https://test"
    onClose={[Function]}
    open={false}
    title="test"
  />
</div>
`;

exports[`src/containers/ContentManagement/Product/Add/lib/components/FileAttachment render type ZIP 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <div>
        <WithStyles(ForwardRef(Grid))
          container={true}
          style={
            Object {
              "flexGrow": 1,
              "marginRight": 12,
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            md={8}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
            xs={12}
          >
            <Icon
              type="ZIP"
            />
                
            <div>
              <WithStyles(Component)
                variant="h5"
              >
                test
              </WithStyles(Component)>
              <br />
              <WithStyles(Component)
                variant="subtitle2"
              >
                
              </WithStyles(Component)>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            md={2}
            xs={10}
          >
            <WithStyles(Component)
              variant="subtitle1"
            >
              Invalid date
               | 
              0
            </WithStyles(Component)>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
              }
            }
            xs={2}
          >
            <div
              onClick={[Function]}
            >
              <Download
                fill="#DE1B1B"
                style={
                  Object {
                    "color": "#DE1B1B",
                    "fontSize": 24,
                  }
                }
              />
            </div>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(LoadableComponent))
    file="https://test"
    onClose={[Function]}
    open={false}
    title="test"
  />
</div>
`;

exports[`src/containers/ContentManagement/Product/Add/lib/components/FileAttachment render type pdf 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <div>
        <WithStyles(ForwardRef(Grid))
          container={true}
          style={
            Object {
              "flexGrow": 1,
              "marginRight": 12,
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            md={8}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
            xs={12}
          >
            <Icon
              type="PDF"
            />
                
            <div>
              <WithStyles(Component)
                variant="h5"
              >
                test
              </WithStyles(Component)>
              <br />
              <WithStyles(Component)
                variant="subtitle2"
              >
                
              </WithStyles(Component)>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            md={2}
            xs={10}
          >
            <WithStyles(Component)
              variant="subtitle1"
            >
              Invalid date
               | 
              0
            </WithStyles(Component)>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
              }
            }
            xs={2}
          >
            <div
              onClick={[Function]}
            >
              <Show
                fill="#DE1B1B"
                style={
                  Object {
                    "color": "#DE1B1B",
                    "fontSize": 24,
                  }
                }
              />
            </div>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(LoadableComponent))
    file="https://test"
    onClose={[Function]}
    open={false}
    title="test"
  />
</div>
`;
